# Urban-Prime-V2

./: .env.example  .gitignore  API_REFERENCE.md  App.tsx  BUILD_PROGRESS_SUMMARY.md  COMPLETION_REPORT.md  DATABASE_INTEGRATION_GUIDE.md  DEPLOYMENT_BACKEND_SYNC.md  FILE_UPLOAD_SYSTEM_GUIDE.md  INTEGRATION_GUIDE.md  LANGUAGE_SYSTEM_TESTING.md  LISTINGS_MANAGEMENT_GUIDE.md  LISTINGS_MANAGEMENT_INTEGRATION.md  MANSUR GAVRIEL Mini Cloud Clutch - Black_Flamma - Shop.html  MULTI_LANGUAGE_IMPLEMENTATION_GUIDE.md  PAYMENT_PROCESSING_GUIDE.md  PRODUCTION_CHECKLIST.md  PROJECT_GUIDE.md  PROJECT_MOBILE_APP_UPGRADE_NOTES.txt  QUICK_START.md  README.md  STORE_BUILDER_GUIDE.md  STORE_BUILDER_IMPLEMENTATION_SUMMARY.md  STORE_BUILDER_INTEGRATION_GUIDE.md  SYSTEM_STATUS.md  WHAT_S_LEFT_TO_BUILD.md  constants.ts  firebase.ts  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  storeTypes.ts  tailwind.config.js  types.ts  vercel.json  vite.config.ts  wrangler.jsonc
MANSUR GAVRIEL Mini Cloud Clutch - Black_Flamma - Shop_files/: 13270319177.html  1520701.html  Carousel-DDIC9Vi1.css  FeedCard-TNO-Ak_c.css  FeedCard-z5L6aVyQ.css  download  global-Cs9XFzQJ.css  js  products-DKo2RJMg.css  root-IOgT8UTf.css  shopify-perf-kit-2.0.15.min.js.download  standalone-dfb65dca3b130340ce121985031c6a5511d52eb90543c2a728b7f48667ab05ca.css  tailwind-B3NQvrKC.css
glaze V1/src-tauri/: Cargo.toml  tauri.conf.json
glaze V1/src-tauri/capabilities/: default.json
glaze V1/src-tauri/src/: app_state.rs  commands.rs  desktop.rs  lib.rs  main.rs  models.rs  observation.rs  runtime.rs
(+775 files in other folders)
