[package]
name = "glaze_desktop"
version = "0.1.0"
description = "Glaze desktop companion"
authors = ["Glaze"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "glaze_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "time", "sync"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
